typhon-cluster/apps/kaneo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaneo
spec:
  selector:
    app: kaneo
  ports:
    - name: http
      port: 5173
      targetPort: http
