typhon-cluster/apps/kaneo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kaneo
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - kaneo.buildwithcaleb.com
  rules:
    - backendRefs:
        - name: kaneo
          port: 5173
